# SLT-Terminal-Wi-fi-Checker

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
dev/: original_checker.py  wifi_checker_logic.py
src/: pywich.py
src/pywich/: __init__.py  main.py  wifi_checker.py
