[project]
name = "pywich"
dynamic = ["version", "dependencies"]
description = "A CLI tool to check wifi usage of SLT connections" 
readme = "README.md" 
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = [
  "wifi",
  "SLT",
  "terminal",
  "cli",
  "click",
  "selenium",
  "webdriver",
  "web-automation"
]  
authors = [
  {name = "Gamitha Wijesinghe", email = "gwijesinghe8+456gh@gmail.com" } 
]
maintainers = [
  {name = "Gamitha Wijesinghe", email = "gwijesinghe8+456gh@gmail.com" } 
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies] 
dev = ["build"]
test = []

[project.urls]
"Source" = "https://github.com/gamithaKalharaW/Unofficial-SLT-Terminal-Wi-fi-Usage-Checker"

[project.scripts]  
pywich = "pywich:main_app"

[tool.setuptools.dynamic]
version = {attr = "pywich.__version__"}
dependencies = {file = "requirements.txt"}

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
